--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "type-check": "tsc --noEmit",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
     "gatsby": "^2.22.15",
+    "gatsby-plugin-postcss": "^2.3.3",
+    "gatsby-plugin-typescript": "^2.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
+    "autoprefixer": "^9.8.0",
+    "eslint": "^7.2.0",
+    "prettier": "2.0.5",
+    "tailwindcss": "^1.4.6",
+    "typescript": "^3.9.5"
   },
   "repository": {
     "type": "git",
