--- a/package.json
+++ b/package.json
@@ -12,21 +12,32 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "type-check": "tsc --noEmit",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "gatsby": "^2.22.15",
     "gatsby-plugin-postcss": "^2.3.3",
     "gatsby-plugin-typescript": "^2.4.4",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/react": "^5.3.19",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
+    "babel-preset-react-app": "^9.1.2",
     "eslint": "^7.2.0",
     "prettier": "2.0.5",
+    "stylelint-config-recommended": "^3.0.0",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
   },
