--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@storybook/addon-actions": "^5.3.19",
     "@storybook/addon-console": "^1.2.1",
     "@storybook/addon-docs": "^5.3.19",
+    "@storybook/addon-knobs": "^5.3.19",
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addon-storysource": "^5.3.19",
     "@storybook/addon-viewport": "^5.3.19",
@@ -37,12 +38,15 @@
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "autoprefixer": "^9.8.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
     "eslint": "^7.2.0",
     "prettier": "2.0.5",
+    "react-docgen-typescript-loader": "^3.7.2",
     "stylelint-config-recommended": "^3.0.0",
     "tailwindcss": "^1.4.6",
+    "ts-loader": "^7.0.5",
     "typescript": "^3.9.5"
   },
   "repository": {
